[WIP] Pack mixin refactor